feat: create route & swagger request for user update
